[tool.poetry]
name = "pypkgs_rtaph"
version = "0.1.0"
description = "A test package"
authors = ["Rafael Pilliard-Hellwig <rafael.taph@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
